--- a/Backend/templates/Registro.html
+++ b/Backend/templates/Registro.html
@@ -8,7 +8,7 @@
 </style>
 <div class="container">
     <table class="table" id="tablaRegistro">
-        <tr><th>Temperatura</th><th>Humedad</th></tr>
+        <tr><th>Sensor</th><th>Hora</th><th>Temperatura</th><th>Humedad</th></tr>
     </table>
 </div>
 <script>
@@ -22,7 +22,8 @@
             let tabla = "";
             for (let x of listaSensor) {
                 console.log(x);
-                tabla += "<tr><td>" + x.Temperatura + "</td><td>" + x.Humedad + "</td><tr>";
+                let date = new Date(Date.now());
+                tabla += "<tr><td>"+1+"</td><td>"+date.toLocaleTimeString()+"</td><td>" + x.Temperatura + " C°</td><td>" + x.Humedad + "% </td><tr>";
             }
             let antestabla = document.getElementById("tablaRegistro").innerHTML;
             document.getElementById("tablaRegistro").innerHTML = antestabla + tabla;
